// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OlympicsMedalTable> click show all 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa eEWNid"
  >
    <helmet>
      <script
        charset="UTF-8"
        defer=""
        src="https://endpoint/static/medal-table.js"
      />
    </helmet>
    <div
      class="pa-medaltable"
      data-auth-token="token"
      data-games-code="OG1896"
      data-medal-icon-type="round"
      data-org-code="AND"
    />
    <div
      class="buttonContainer"
    >
      <button
        class="sc-bwzfXH fXauhE"
      >
        Collapse
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<OlympicsMedalTable> renders 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa htfVaS"
  >
    <helmet>
      <script
        charset="UTF-8"
        defer=""
        src="https://endpoint/static/medal-table.js"
      />
    </helmet>
    <div
      class="pa-medaltable"
      data-auth-token="token"
      data-games-code="OG1896"
      data-medal-icon-type="round"
      data-org-code="GBR"
    />
    <div
      class="buttonContainer"
    >
      <button
        class="sc-bwzfXH fXauhE"
      >
        Show All
      </button>
    </div>
  </div>
</DocumentFragment>
`;
